Fixed wrong data type for the last monster field. Added Rect structure for Mac (which is different from Windows' Rect16 and proved a pain to be tracked down...)

--- a/BoE Data Spec/structures/MonsterRecordType.html
+++ b/BoE Data Spec/structures/MonsterRecordType.html
@@ -286,7 +286,7 @@
 			  <button type="button" class="list-group-item list-group-item-action list-group-item-field" id="BoE-Monster-Data" data-bs-toggle="list" href="#MonsterStatus" role="tab">
 				 <table>
 					<tbody>
-						<td class="typeOffset">0x000041</td>
+						<td class="typeOffset">0x000040</td>
 						<td class="typeCol"><code>short</code></td>
 						<td class="nameCol"><code>status[15]</code></td>
 					</tbody>
@@ -296,7 +296,7 @@
 			  <button type="button" class="list-group-item list-group-item-action list-group-item-field" id="BoE-Monster-Data" data-bs-toggle="list" href="#MonsterDirection" role="tab">
 				 <table>
 					<tbody>
-						<td class="typeOffset">0x00005F</td>
+						<td class="typeOffset">0x00005E</td>
 						<td class="typeCol"><code>unsigned char</code></td>
 						<td class="nameCol"><code>direction</code></td>
 					</tbody>
@@ -306,7 +306,7 @@
 			  <button type="button" class="list-group-item list-group-item-action list-group-item-field" id="BoE-Monster-Data" data-bs-toggle="list" href="#MonsterImmunities" role="tab">
 				 <table>
 					<tbody>
-						<td class="typeOffset">0x000060</td>
+						<td class="typeOffset">0x00005F</td>
 						<td class="typeCol"><code>unsigned char</code></td>
 						<td class="nameCol"><code>immunities</code></td>
 					</tbody>
@@ -317,12 +317,12 @@
 				 <table>
 					<tbody>
 						<tr>
-							<td class="typeOffset">0x000061</td>
+							<td class="typeOffset">0x000060</td>
 							<td class="typeCol"><code>unsigned char</code></td>
 							<td class="nameCol"><code>x_width</code></td>
 						</tr>
 						<tr>
-							<td class="typeOffset">0x000062</td>
+							<td class="typeOffset">0x000061</td>
 							<td class="typeCol"><code>unsigned char</code></td>
 							<td class="nameCol"><code>y_width</code></td>
 						</tr>
@@ -332,7 +332,7 @@
 			  <button type="button" class="list-group-item list-group-item-action list-group-item-field" id="BoE-Monster-Data" data-bs-toggle="list" href="#MonsterRadiate1" role="tab">
 				 <table>
 					<tbody>
-						<td class="typeOffset">0x000063</td>
+						<td class="typeOffset">0x000062</td>
 						<td class="typeCol"><code>unsigned char</code></td>
 						<td class="nameCol"><code>radiate1</code></td>
 					</tbody>
@@ -342,7 +342,7 @@
 			  <button type="button" class="list-group-item list-group-item-action list-group-item-field" id="BoE-Monster-Data" data-bs-toggle="list" href="#MonsterRadiate2" role="tab">
 				 <table>
 					<tbody>
-						<td class="typeOffset">0x000064</td>
+						<td class="typeOffset">0x000063</td>
 						<td class="typeCol"><code>unsigned char</code></td>
 						<td class="nameCol"><code>radiate2</code></td>
 					</tbody>
@@ -352,7 +352,7 @@
 			  <button type="button" class="list-group-item list-group-item-action list-group-item-field" id="BoE-Monster-Data" data-bs-toggle="list" href="#MonsterDefaultAttitude" role="tab">
 				 <table>
 					<tbody>
-						<td class="typeOffset">0x000065</td>
+						<td class="typeOffset">0x000064</td>
 						<td class="typeCol"><code>unsigned char</code></td>
 						<td class="nameCol"><code>default_attitude</code></td>
 					</tbody>
@@ -362,7 +362,7 @@
 			  <button type="button" class="list-group-item list-group-item-action list-group-item-field" id="BoE-Monster-Data" data-bs-toggle="list" href="#MonsterSummonType" role="tab">
 				 <table>
 					<tbody>
-						<td class="typeOffset">0x000066</td>
+						<td class="typeOffset">0x000065</td>
 						<td class="typeCol"><code>unsigned char</code></td>
 						<td class="nameCol"><code>summon_type</code></td>
 					</tbody>
@@ -372,7 +372,7 @@
 			  <button type="button" class="list-group-item list-group-item-action list-group-item-field" id="BoE-Monster-Data" data-bs-toggle="list" href="#MonsterDefaultFacialPic" role="tab">
 				 <table>
 					<tbody>
-						<td class="typeOffset">0x000067</td>
+						<td class="typeOffset">0x000066</td>
 						<td class="typeCol"><code>unsigned char</code></td>
 						<td class="nameCol"><code>default_facial_pic</code></td>
 					</tbody>
@@ -383,17 +383,17 @@
 				 <table>
 					<tbody>
 						<tr>
-							<td class="typeOffset">0x000068</td>
+							<td class="typeOffset">0x000067</td>
 							<td class="typeCol"><code>unsigned char</code></td>
 							<td class="nameCol"><code>res1</code></td>
 						</tr>
 						<tr>
-							<td class="typeOffset">0x000069</td>
+							<td class="typeOffset">0x000068</td>
 							<td class="typeCol"><code>unsigned char</code></td>
 							<td class="nameCol"><code>res2</code></td>
 						</tr>
 						<tr>
-							<td class="typeOffset">0x00006A</td>
+							<td class="typeOffset">0x000069</td>
 							<td class="typeCol"><code>unsigned char</code></td>
 							<td class="nameCol"><code>res3</code></td>
 						</tr>
@@ -404,8 +404,8 @@
 			  <button type="button" class="list-group-item list-group-item-action list-group-item-field" id="BoE-Monster-Data" data-bs-toggle="list" href="#MonsterPictureNum" role="tab">
 				 <table>
 					<tbody>
-						<td class="typeOffset">0x00006B</td>
-						<td class="typeCol"><code>unsigned char</code></td>
+						<td class="typeOffset">0x00006A</td>
+						<td class="typeCol"><code>short</code></td>
 						<td class="nameCol"><code>picture_num</code></td>
 					</tbody>
 				</table>
