--- a/BoE Data Spec/structures/RECT.html
+++ b/BoE Data Spec/structures/RECT.html
@@ -21,7 +21,7 @@
 	  
 		<div class="row pb-2">
 		  <div class="col-4">
-			  <h3 class="text-center">RECT Type</h3>
+			  <h3 class="text-center">RECT Type (Windows)</h3>
 				<div class="list-group border border-dark" id="list-tab" role="tablist">
 				<table>
 						<tbody>
@@ -40,6 +40,35 @@
 							<tr>
 								<td class="typeCol"><code>short</code></td>
 								<td class="nameCol"><code>bottom</code></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				Size : 0x8 bytes
+			</div>
+		</div>
+		
+		<div class="row pb-2">
+		  <div class="col-4">
+			  <h3 class="text-center">Rect Type (Mac)</h3>
+				<div class="list-group border border-dark" id="list-tab" role="tablist">
+				<table>
+						<tbody>
+							<tr>
+								<td class="typeCol"><code>short</code></td>
+								<td class="nameCol"><code>top</code></td>
+							</tr>
+							<tr>
+								<td class="typeCol"><code>short</code></td>
+								<td class="nameCol"><code>left</code></td>
+							</tr>
+							<tr>
+								<td class="typeCol"><code>short</code></td>
+								<td class="nameCol"><code>bottom</code></td>
+							</tr>
+							<tr>
+								<td class="typeCol"><code>short</code></td>
+								<td class="nameCol"><code>right</code></td>
 							</tr>
 						</tbody>
 					</table>
