Corrected the monster skills table and added comments for bugged ones.

--- a/BoE Data Spec/structures/MonsterRecordType.html
+++ b/BoE Data Spec/structures/MonsterRecordType.html
@@ -830,51 +830,47 @@
 							</tr>
 							<tr>
 								<td><code class="fs-5">4</code></td>
-								<td>Throws rocks (dam 2-12)</td>
-							</tr>
-							<tr>
-								<td><code class="fs-5">5</code></td>
-								<td>Throws rocks (dam 3-18)</td>
-							</tr>
-							<tr>
-								<td><code class="fs-5">6</code></td>
 								<td>Throws rocks (dam 4-24)</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">7</code></td>
+								<td><code class="fs-5">5</code></td>
 								<td>Throws rocks (dam 5-30)</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">8</code></td>
+								<td><code class="fs-5">6</code></td>
 								<td>Throws rocks (dam 6-36)</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">9</code></td>
+								<td><code class="fs-5">7</code></td>
 								<td>Throws razordisks</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">10</code></td>
+								<td><code class="fs-5">8</code></td>
 								<td>Petrification ray</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">11</code></td>
+								<td><code class="fs-5">9</code></td>
 								<td>Spell point drain ray</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">12</code></td>
+								<td><code class="fs-5">10</code></td>
 								<td>Heat ray</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">13</code></td>
+								<td><code class="fs-5">11</code></td>
 								<td>Invisible</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">14</code></td>
+								<td><code class="fs-5">12</code></td>
 								<td>Splits when hit</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">15</code></td>
+								<td><code class="fs-5">13</code></td>
 								<td>Mindless (resists fear)</td>
+							</tr>
+							<tr>
+								<td><code class="fs-5">14</code></td>
+								<td>Breathes stinking clouds</td>
 							</tr>
 						</tbody>
 					</table>
@@ -889,67 +885,63 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td><code class="fs-5">16</code></td>
-								<td>Breathes stinking clouds</td>
-							</tr>
-							<tr>
-								<td><code class="fs-5">17</code></td>
+								<td><code class="fs-5">15</code></td>
 								<td>Icy touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">18</code></td>
+								<td><code class="fs-5">16</code></td>
 								<td>Experience draining touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">19</code></td>
+								<td><code class="fs-5">17</code></td>
 								<td>Icy and draining touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">20</code></td>
+								<td><code class="fs-5">18</code></td>
 								<td>Slowing touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">21</code></td>
+								<td><code class="fs-5">19</code></td>
 								<td>Shoots webs</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">22</code></td>
+								<td><code class="fs-5">20</code></td>
 								<td>Good archer</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">23</code></td>
+								<td><code class="fs-5">21</code></td>
 								<td>Steals food when hits</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">24</code></td>
+								<td><code class="fs-5">22</code></td>
 								<td>Permanent martyr's shield</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">25</code></td>
-								<td>Paralysis ray</td>
+								<td><code class="fs-5">23</code></td>
+								<td>Paralysis ray (bugged and acts as Cold immunity)</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">26</code></td>
+								<td><code class="fs-5">24</code></td>
 								<td>Dumbfounding touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">27</code></td>
+								<td><code class="fs-5">25</code></td>
 								<td>Disease touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">28</code></td>
+								<td><code class="fs-5">26</code></td>
 								<td>Absorb spells</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">29</code></td>
+								<td><code class="fs-5">27</code></td>
 								<td>Web touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">30</code></td>
+								<td><code class="fs-5">28</code></td>
 								<td>Sleep touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">31</code></td>
+								<td><code class="fs-5">29</code></td>
 								<td>Paralysis touch</td>
 							</tr>
 						</tbody>
@@ -966,35 +958,35 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td><code class="fs-5">32</code></td>
-								<td>Petrification touch</td>
+								<td><code class="fs-5">30</code></td>
+								<td>Petrification touch (bugged and acts as Disease touch)</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">33</code></td>
+								<td><code class="fs-5">31</code></td>
 								<td>Acid touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">34</code></td>
+								<td><code class="fs-5">32</code></td>
 								<td>Breathe sleep clouds</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">35</code></td>
+								<td><code class="fs-5">33</code></td>
 								<td>Acid spit</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">36</code></td>
+								<td><code class="fs-5">34</code></td>
 								<td>Shoot spines</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">37</code></td>
+								<td><code class="fs-5">35</code></td>
 								<td>Death touch</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">38</code></td>
+								<td><code class="fs-5">36</code></td>
 								<td>Invulnerable</td>
 							</tr>
 							<tr>
-								<td><code class="fs-5">39</code></td>
+								<td><code class="fs-5">37</code></td>
 								<td>Guard</td>
 							</tr>
 						</tbody>
