--- a/BoE Data Spec/index.html
+++ b/BoE Data Spec/index.html
@@ -181,7 +181,7 @@
 				<a class="nav-link" href="structures/Location.html">Location</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="structures/RECT.html">RECT (win16)</a>
+				<a class="nav-link" href="structures/RECT.html">RECT</a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link" href="structures/directions.html">Directions constants</a>
